--- a/POTD1/index.html
+++ b/POTD1/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1>HTML and CSS</h1>
-        <h2>Your name</h2>
+        <h2>Wentao and Alejandro</h2>
         <p>Let's design your web page</p>
         <p class="custom">CSS Examples</p>
         <font class="important">Your name</font>
