--- a/POTD1/index.html
+++ b/POTD1/index.html
@@ -8,8 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="http://www.cs.virginia.edu/~up3f/cs4640/images/webpl.png" type="image/png" />
         <link rel="stylesheet" type="text/css" href="styles/main.css" />  
+        
     </head>
     <body>
+        <header>
+            
+        </header>
         <h1>HTML and CSS</h1>
         <h2>Your name</h2>
         <p>Let's design your web page</p>
@@ -18,6 +22,7 @@
         <p>Paragraph with default format</p>
         <p class="custom">A new paragraph is added.</p>
         <p class="custom">And then another paragraph.</p>
+        <div class = >
         <div id="content">
             <div class="subcontent">
               <p class="normal">
