--- a/POTD1/index.html
+++ b/POTD1/index.html
@@ -16,16 +16,16 @@
         </div>
         <div class="row">
             <div class="column">
-                <img src="http://www.cs.virginia.edu/~up3f/cs4640/inclass/static-page/images/highlight2.png" alt="zombie image" />
-                <p>car 1</p>
+                <img src="car1.jpeg" alt="zombie image" />
+                <p>Name: Volve</p>
             </div>
             <div class="column">
-                <img src="http://www.cs.virginia.edu/~up3f/cs4640/inclass/static-page/images/highlight2.png" alt="zombie image" />
-                <p>car 2</p>
+                <img src="car2.jpeg" alt="zombie image" />
+                <p>Name: maserati</p>
             </div>
             <div class="column">
-                <img src="http://www.cs.virginia.edu/~up3f/cs4640/inclass/static-page/images/highlight2.png" alt="zombie image" />
-                <p>car 3</p>
+                <img src="car3.jpeg" alt="zombie image" />
+                <p>Name: BMW</p>
             </div>
         </div>
         
