--- a/Assignment 2/homepage.html
+++ b/Assignment 2/homepage.html
@@ -5,28 +5,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jeopardy</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,500" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-    <nav class="custom-nav">
-    <ul class="nav nav-pills nav-fill">
-        <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Create</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">My Games</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Favorites</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link">Sign Out</a>
-        </li>
-    </ul>
+    <nav class="custom-nav navbar-expand-lg">
+        <div class = "container-fluid">
+        <ul class="nav nav-pills nav-fill">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Create</a>
+            </li>
+            <li class="nav-item">
+                <form role="search">
+                    <input class="form-control" type="search" placeholder="Search for Jeopardy Games" aria-label="Search" autofocus>
+                    <button class="btn btn-primary" type="submit">Search</button>
+                </form>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Sign Out</a>
+            </li>
+        </ul>
+        </div>
     </nav>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
