--- a/Assignment 2/homepage.html
+++ b/Assignment 2/homepage.html
@@ -14,26 +14,38 @@
 <body>
 
     <nav class="custom-nav navbar-expand-lg">
-        <div class = "container-fluid">
-        <ul class="nav nav-pills nav-fill">
-            <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Create</a>
-            </li>
-            <li class="nav-item">
-                <form role="search">
-                    <input class="form-control" type="search" placeholder="Search for Jeopardy Games" aria-label="Search" autofocus>
-                    <button class="btn btn-primary" type="submit">Search</button>
-                </form>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Sign Out</a>
-            </li>
-        </ul>
+        <div class="container-fluid">
+            <ul class="nav nav-pills nav-fill">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Create</a>
+                </li>
+                <li class="nav-item">
+                    <form role="search">
+                        <input class="form-control" type="search" placeholder="Search for Jeopardy Games"
+                            aria-label="Search" autofocus>
+                        <button class="btn btn-primary" type="submit">Search</button>
+                    </form>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Sign Out</a>
+                </li>
+            </ul>
         </div>
     </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col custom-col col-border">
+                <h1>My Games</h1>
+            </div>
+            <div class="col custom-col">
+                <h1>Favorites</h1>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
