added vertical line between categories

--- a/Assignment 2/homepage.html
+++ b/Assignment 2/homepage.html
@@ -38,9 +38,12 @@
 
     <div class="container">
         <div class="row">
-            <div class="col custom-col col-border">
+            <div class="col custom-col">
                 <h1>My Games</h1>
             </div>
+            
+            <div class="col vertical"></div>
+
             <div class="col custom-col">
                 <h1>Favorites</h1>
             </div>
