added games to each category

--- a/Assignment 2/homepage.html
+++ b/Assignment 2/homepage.html
@@ -40,12 +40,54 @@
         <div class="row">
             <div class="col custom-col">
                 <h1>My Games</h1>
+
+                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Title</h5>
+                            <small>Category</small>
+                        </div>
+                        <p class="mb-1">Description</p>
+                        <small>Author</small>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">CS 4640 Final</h5>
+                            <small class="text-muted">Computer Science</small>
+                        </div>
+                        <p class="mb-1">Review game for web programming languages. Mostly focuses on content after
+                            mid-term 2.</p>
+                        <small class="text-muted">Professor Foo, Fall 2022</small>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">APMA 3100 Quiz 2</h5>
+                            <small class="text-muted">Math</small>
+                        </div>
+                        <p class="mb-1">Focuses on module 4 and 6. Only contains questions regarding discrete
+                            probabilities.</p>
+                        <small class="text-muted">Alejandro Perera, 05/30/2022</small>
+                    </a>
+                </div>
+
             </div>
-            
+
             <div class="col vertical"></div>
 
             <div class="col custom-col">
                 <h1>Favorites</h1>
+
+                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">Attack on Titan Jeopardy</h5>
+                            <small>Anime</small>
+                        </div>
+                        <p class="mb-1">Questions are anime only, no spoilers!!!</p>
+                        <small>Anonymous</small>
+                    </a>
+                </div>
+
             </div>
         </div>
     </div>
