--- a/Assignment 2/navbar.html
+++ b/Assignment 2/navbar.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <ul class="nav nav-pills nav-fill">
             <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link active" href="homepage.php">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Create</a>
@@ -15,7 +15,7 @@
                 </form>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Sign Out</a>
+                <a class="nav-link" href="login.php">Sign In</a>
             </li>
         </ul>
     </div>
