--- a/Assignment 2/navbar.html
+++ b/Assignment 2/navbar.html
@@ -5,7 +5,7 @@
                 <a class="nav-link active" href="homepage.php">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Create</a>
+                <a class="nav-link" href="creategame.php">Create</a>
             </li>
             <li class="nav-item">
                 <form role="search">
