--- a/Assignment 2/navbar.html
+++ b/Assignment 2/navbar.html
@@ -2,13 +2,13 @@
     <div class="container-fluid">
         <ul class="nav nav-pills nav-fill">
             <li class="nav-item">
-                <a class="nav-link active" href="homepage.php">Home</a>
+                <a class="nav-link" id="homepage-tab" href="homepage.php">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="creategame.php">Create</a>
+                <a class="nav-link" id='create-tab' href="creategame.php">Create</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="login.php">Sign In</a>
+                <a class="nav-link" id='login-tab' href="login.php">Sign In</a>
             </li>
         </ul>
     </div>
