--- a/Assignment 2/navbar.html
+++ b/Assignment 2/navbar.html
@@ -5,7 +5,7 @@
                 <a class="nav-link" id="homepage-tab" href="homepage.php">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id='create-tab' href="creategame.php">Create</a>
+                <a class="nav-link" id='create-tab' href="creategame1.php">Create</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" id='login-tab' href="login.php">Sign In</a>
