--- a/Assignment 2/navbar.html
+++ b/Assignment 2/navbar.html
@@ -1,4 +1,4 @@
-<nav class="custom-nav navbar-expand-lg">
+<!-- <nav class="custom-nav navbar-expand-lg">
     <div class="container-fluid">
         <ul class="nav nav-pills nav-fill">
             <li class="nav-item">
@@ -12,4 +12,49 @@
             </li>
         </ul>
     </div>
-</nav>
+</nav> -->
+
+
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Your-Logo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="nav ms-auto nav-pills nav-fill">
+            <li class="nav-item">
+                <a class="nav-link" id="homepage-tab" href="homepage.php">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id='create-tab' href="creategame1.php">Create</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id='login-tab' href="login.php">Sign In</a>
+            </li>
+        </ul>
+        <!-- <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>            
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Services
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdown01">
+              <li><a class="dropdown-item" href="#">Design</a></li>
+              <li><a class="dropdown-item" href="#">Development</a></li>
+              <li><a class="dropdown-item" href="#">Consulting</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled-menu</a> 
+          </li>
+        </ul> -->
+      </div>
+    </div>
+   </nav>
